update the js-background-colorcycle project file

--- a/Js-Background-ColorCycle/index.html
+++ b/Js-Background-ColorCycle/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="js/Script.js" deferls></script>
+    <link rel="stylesheet" href="/Js-Background-ColorCycle/css/style.css">
+    <script src="/Js-Background-ColorCycle/js/Script.js" defer></script>
     <title>Javascript background colorcycle</title>
 </head>
 
@@ -20,11 +20,12 @@
     <div id="content">
         <h1>Js Background ColorCycle</h1>
         <p class="code"></p>
-        <div id="btn-botton">
+        <div id="buttons">
             <button class="btn-solid btn">Solid</button>
             <button class="btn-gradient btn">Gradient</button>
         </div>
     </div>
-    <img class="logo" src="/image/Heartwell Okorie@2x.png" alt="">
+    <img class="logo" src="/Js-Background-ColorCycle/image/Heartwell Okorie@2x.png" alt="">
 </body>
+
 </html>
