--- a/Js-Background-ColorCycle/app.html
+++ b/Js-Background-ColorCycle/app.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Js-Background-ColorCycle/css/style.css">
-    <script src="/Js-Background-ColorCycle/js/Script.js" defer></script>
+    <script src="/Js-Background-ColorCycle/js/hex.js" defer></script>
     <title>Javascript background colorcycle</title>
 </head>
 
@@ -14,7 +14,7 @@
         <h3 class="hero">ColorCycle</h3>
         <ul>
             <li><a href="index.html">Simple</a></li>
-            <li><a href="app.html">Hex</a></li>
+            <li><a href="app.html"></a>Hex</li>
         </ul>
     </nav>
     <div id="content">
