finish the first version of the counter project

--- a/Counter/index.html
+++ b/Counter/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Project two/css/style.css">
+    <link rel="stylesheet" href="/Counter/css/style.css">
+    <script src="/Counter/js/script.js" defer></script>
     <title>Counter</title>
 </head>
 
 <body>
+    <div class="content">
+        <h1>Counter</h1>
+        <p class="display">0</p>
+        <div class="buttons">
+            <button class="btn decrease">decrease</button>
+            <button class="btn reset">reset</button>
+            <button class="btn increase">increase</button>
+        </div>
+    </div>
 </body>
 
 </html>
