--- a/Our-Review/index.html
+++ b/Our-Review/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="content">
-        <h1>Our Review</h1>
+        <h1>Our Reviews</h1>
         <div class="review">
     
         </div>
