finish working on the html template

--- a/Our-Review/index.html
+++ b/Our-Review/index.html
@@ -4,16 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Our-Review/css/style.css">
+    <script src="/Our-Review/js/script.js" defer></script>
     <title>Our Review</title>
 </head>
 
 <body>
-    <div class="content">
-        <h1>Our Reviews</h1>
-        <div class="review">
-    
-        </div>
-    </div>
+    <main>
+        <section class="container">
+            <div class="title">
+                <h1>Our Reviews</h1>
+            </div>
+            <div class="reviews">
+                <div class="img-container">
+                    <img src="/Our-Review/images/image-patrick.jpg" id="person-img" alt="">
+                </div>
+                <h3 id="author">Sara Jones</h3>
+                <p id="job">ux designer</p>
+                <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam veniam reiciendis, esse
+                    ipsam dolorem soluta quaerat incidunt hic rerum at. Molestias reprehenderit voluptas tempore
+                    voluptatem quos soluta modi corrupti harum.</p>
+                <div class="preview-buttons">
+                    <img class="btn prev-btn" src="/Our-Review/images/before.png" alt="" srcset="">
+                    <img class="btn next-btn" src="/Our-Review/images/next.png" alt="" srcset="">
+                </div>
+                <!-- random Button -->
+                <button id="random-btn">Suprise Me</button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
