worked on the desktop version

--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -12,17 +12,31 @@
 <body>
     <header>
         <nav class="navbar">
-            <h3 class="logo">SideLogo</h3>
             <ul class="menu hidden">
+                <div class="navheader">
+                    <h3 class="logo">SideLogo</h3>
+                    <button class="btn-close">X</button>
+                </div>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
+                <div class="icons">
+                    <a href="https://github.com/officialheartwell">
+                        <img src="/Sidebar/assets/github.svg" class="icon" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/in/heartwell-okorie/">
+                        <img src="/Sidebar/assets/linkedin.svg" class="icon" alt="">
+                    </a>
+                    <a href="https://x.com/HeartwellOkorie">
+                        <img src="/Sidebar/assets/x.svg" class="icon x" alt="">
+                    </a>
+                </div>
             </ul>
             <div class="hamburger-menu">
                 <div class="hamburger"></div>
-            </div> 
+            </div>
         </nav>
     </header>
 </body>
